fix: screen stretching when scrolling on the home page

--- a/src/components/AuthorCard/styles.module.scss
+++ b/src/components/AuthorCard/styles.module.scss
@@ -1,4 +1,8 @@
 .container {
+  @include respond('desktop') {
+    padding: $s20 $s12;
+  }
+
   display: flex;
   flex-direction: column;
   gap: $s20;
