--- a/src/components/CategoryCard/styles.module.scss
+++ b/src/components/CategoryCard/styles.module.scss
@@ -1,14 +1,39 @@
 .container {
+  @include respond('tablet') {
+    padding: $s16;
+  }
+
+  @include respond('phone') {
+    padding: $s8;
+  }
+
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+
   padding: $s32;
+
   border: 1px solid $light-gray;
+
+  transition:
+    background-color 0.3s ease,
+    padding 0.3s ease,
+    border-color 0.3s ease;
 
   &:hover {
     background-color: $yellow;
   }
 
+  h2 {
+    margin: $s16 0;
+  }
+
   p {
     flex-grow: 1;
   }
+}
+
+.image {
+  flex-shrink: 0;
+  width: 100%;
 }
